// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CallTranscript Component > Snapshot Testing > should match snapshot for counsellor view 1`] = `
<div
  class="w-screen h-screen flex justify-center items-center"
>
  <div
    class="w-screen h-screen bg-[#171A1A] flex flex-col gap-10 justify-center items-center overflow-hidden"
  >
    <div
      data-testid="call-interface"
    >
      CallInterface - 
      Counsellor
       -
       
      Joined
       - Microphone Mode
    </div>
    <div
      data-testid="real-time-transcript"
    >
      RealTimeTranscript - Focus: 
      No
       - Messages: 
      2
    </div>
    <div
      data-testid="call-controls"
    >
      <button
        data-testid="end-session-btn"
        style="display: block;"
      >
        End Session
      </button>
      <button
        data-testid="focus-btn"
        style="display: block;"
      >
        Focus: 
        Off
      </button>
      <button
        data-testid="pause-transcription-btn"
        disabled=""
        style="display: block;"
      >
        Resume
      </button>
    </div>
  </div>
  <div
    data-testid="confirmation-dialog"
    style="display: none;"
  >
    <div>
      End 
      Session
    </div>
    <div>
      Are you sure you want to end this Session
    </div>
    <button
      data-testid="confirm-btn"
    >
      End Session
    </button>
    <button
      data-testid="cancel-btn"
    >
      Cancel
    </button>
  </div>
  <div
    data-testid="call-sidebar"
    style="display: block;"
  >
    CallSidebar - Focus: 
    No
     - Nudges: 
    1
     - Stage: 
    <button
      data-testid="close-sidebar-btn"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`CallTranscript Component > Snapshot Testing > should match snapshot for counselor view 1`] = `
<div
  class="w-screen h-screen flex justify-center items-center"
>
  <div
    class="w-screen h-screen bg-[#171A1A] flex flex-col gap-10 justify-center items-center overflow-hidden"
  >
    <div
      data-testid="call-interface"
    >
      CallInterface - 
      Counsellor
       -
       
      Joined
       - Microphone Mode
    </div>
    <div
      data-testid="real-time-transcript"
    >
      RealTimeTranscript - Focus: 
      No
       - Messages: 
      2
    </div>
    <div
      data-testid="call-controls"
    >
      <button
        data-testid="end-session-btn"
        style="display: block;"
      >
        End Session
      </button>
      <button
        data-testid="focus-btn"
        style="display: block;"
      >
        Focus: 
        Off
      </button>
      <button
        data-testid="pause-transcription-btn"
        disabled=""
        style="display: block;"
      >
        Resume
      </button>
    </div>
  </div>
  <div
    data-testid="confirmation-dialog"
    style="display: none;"
  >
    <div>
      End 
      Session
    </div>
    <div>
      Are you sure you want to end this Session
    </div>
    <button
      data-testid="confirm-btn"
    >
      End Session
    </button>
    <button
      data-testid="cancel-btn"
    >
      Cancel
    </button>
  </div>
  <div
    data-testid="call-sidebar"
    style="display: block;"
  >
    CallSidebar - Focus: 
    No
     - Nudges: 
    1
     - Stage: 
    <button
      data-testid="close-sidebar-btn"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`CallTranscript Component > Snapshot Testing > should match snapshot for exotel mode 1`] = `
<div
  class="w-screen h-screen flex justify-center items-center"
>
  <div
    class="w-screen h-screen bg-[#171A1A] flex flex-col gap-10 justify-center items-center overflow-hidden"
  >
    <div
      data-testid="call-interface"
    >
      CallInterface - 
      Counsellor
       -
       
      Joined
       - Microphone Mode
       - Exotel Mode
    </div>
    <div
      data-testid="real-time-transcript"
    >
      RealTimeTranscript - Focus: 
      No
       - Messages: 
      2
    </div>
    <div
      data-testid="call-controls"
    >
      <button
        data-testid="end-session-btn"
        style="display: block;"
      >
        End Session
      </button>
      <button
        data-testid="focus-btn"
        style="display: block;"
      >
        Focus: 
        Off
      </button>
      <button
        data-testid="pause-transcription-btn"
        disabled=""
        style="display: block;"
      >
        Resume
      </button>
    </div>
  </div>
  <div
    data-testid="confirmation-dialog"
    style="display: none;"
  >
    <div>
      End 
      Session
    </div>
    <div>
      Are you sure you want to end this Session
    </div>
    <button
      data-testid="confirm-btn"
    >
      End Session
    </button>
    <button
      data-testid="cancel-btn"
    >
      Cancel
    </button>
  </div>
  <div
    data-testid="call-sidebar"
    style="display: block;"
  >
    CallSidebar - Focus: 
    No
     - Nudges: 
    1
     - Stage: 
    <button
      data-testid="close-sidebar-btn"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`CallTranscript Component > Snapshot Testing > should match snapshot for microphone mode 1`] = `
<div
  class="w-screen h-screen flex justify-center items-center"
>
  <div
    class="w-screen h-screen bg-[#171A1A] flex flex-col gap-10 justify-center items-center overflow-hidden"
  >
    <div
      data-testid="call-interface"
    >
      CallInterface - 
      Counsellor
       -
       
      Joined
       - Microphone Mode
    </div>
    <div
      data-testid="real-time-transcript"
    >
      RealTimeTranscript - Focus: 
      No
       - Messages: 
      2
    </div>
    <div
      data-testid="call-controls"
    >
      <button
        data-testid="end-session-btn"
        style="display: block;"
      >
        End Session
      </button>
      <button
        data-testid="focus-btn"
        style="display: block;"
      >
        Focus: 
        Off
      </button>
      <button
        data-testid="pause-transcription-btn"
        disabled=""
        style="display: block;"
      >
        Resume
      </button>
    </div>
  </div>
  <div
    data-testid="confirmation-dialog"
    style="display: none;"
  >
    <div>
      End 
      Session
    </div>
    <div>
      Are you sure you want to end this Session
    </div>
    <button
      data-testid="confirm-btn"
    >
      End Session
    </button>
    <button
      data-testid="cancel-btn"
    >
      Cancel
    </button>
  </div>
  <div
    data-testid="call-sidebar"
    style="display: block;"
  >
    CallSidebar - Focus: 
    No
     - Nudges: 
    1
     - Stage: 
    <button
      data-testid="close-sidebar-btn"
    >
      Close
    </button>
  </div>
</div>
`;
